--- a/config/database.yml
+++ b/config/database.yml
@@ -5,20 +5,32 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  #database: db/development.sqlite3
+  encoding: unicode
+  database: myapp_development
+  pool: 5
+  username: rails_dev
+  password: root_20ki
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  #database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: myapp_test
+  pool: 5
+  username: rails_dev
+  password: root_20ki
 
 production:
   <<: *default
