test6 action_mailer

--- a/config/database.yml
+++ b/config/database.yml
@@ -12,9 +12,9 @@ default: &default
 
 development:
   <<: *default
-  database: myapp_development
+  #database: db/development.sqlite3
   encoding: unicode
-
+  database: myapp_development
   pool: 5
   username: rails_dev
   password: root_20ki
@@ -23,8 +23,6 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-# DATABASE_URL="postgres://myuser:mypass@localhost/somedatabase"
-#
 test:
   <<: *default
   #database: db/test.sqlite3
@@ -38,7 +36,5 @@ test:
 production:
   <<: *default
   database: dbrd7rvedqdojv
-  username: qjfajfouogbslk
+  username: myapp
   password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
-  url: <%= DATABASE_URL %>
-  port: 5432
